...
        tableView.dataSource = self
        tableView.delegate = self
        tableView.usesAlternatingRowBackgroundColors = true
        tableView.rowHeight = 36
        tableView.headerView = NSTableHeaderView()
        tableView.setAccessibilityLabel("Operations table")
        tableView.setAccessibilityIdentifier("operations-table")

        // Context menu
        let menu = NSMenu()
        menu.delegate = self
        tableView.menu = menu

...
